--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "coffeeshop",
-  "version": "0.1.0",
+  "name": "coffeeshop-1",
+  "version": "0.0.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,7 +12,7 @@
     "framer-motion": "^11.3.28",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.15",
-    "next": "14.2.5",
+    "next": "14.2.35",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -24,7 +24,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "14.2.35",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
